# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world
    3. /etc/portage/virtuals is _USER_ configs only. Do not copy the old file.
    4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
       It is for convenience. Do not mistake this for the actual file.

  21 Jul 2004; Masatomo Nakano <nakano@gentoo.org> bin/emerge: Fixed bug 
  which blocks a package itself with -U option.

  20 Jul 2004; Masatomo Nakano <nakano@gentoo.org> bin/repoman: Fixed
  profile cache problem. (#43601, #56170)

  20 Jul 2004; Marius Mauch <genone@gentoo.org> bin/ebuild.sh:
  added usev() and hasv() as complement to useq() and hasq().

  18 Jul 2004; Brian Harring <ferringb@gentoo.org> bin/repoman: Corrected 
  ebuild.allmasked check, so that it checks for an available version across all
  arches, rather then the last arch processed.  Typo fixed also- bugs #57356 and
  #57068.

  17 Jul 2004; Jason Stubbs <jstubbs@gentoo.org> bin/repoman: Added patch from
  #49126 that makes repoman check that a USE flag from use.local.desc applies
  to the packages that make use of it.

  14 Jul 2004; Marius Mauch <genone@gentoo.org> bin/emerge:
  added a deprecation warning for --upgradeonly

  14 Jul 2004; Marius Mauch <genone@gentoo.org> bin/etc-update:
  Added a hint to etc-update so people that don't know what to do don't use -3
  or -5 by accident.

  12 Jul 2004; Jason Stubbs <jstubbs@gentoo.org> bin/emerge:
  Adjusted masked binary checking code to exclude --usepkgonly.

*portage-2.0.51_pre13 (09 Jul 2003): Fixes and Public Readiness

  10 Jul 2004; Jason Stubbs <jstubbs@gentoo.org> man/portage.5:
  Adjusted documentation for user use.mask to match implementation.

  21 Jun 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: Included
  ferringb's logic fix for the repoman code. Fix that prevents vardb from